<resources>
    <string name="app_name">GameMei</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--订阅界面-->
    <string name="drawer_btn_rss">设置关注</string>
    <string name="subscribe_my_category">已关注:</string>
    <string name="subscribe_more_category">推荐关注</string>
    <string name="subscribe_manager_category_info">拖拽可以排序</string>
    <string name="attention_edittext">请输入添加关键词，我们会尽力给您匹配</string>
    <string name="attention_edit">编辑</string>
    <string name="attention_search">搜索</string>
    <string name="ta_qq_8m_20m">想对喜欢的人表白吗？\n那试试让TA来玩这款游戏吧!游戏表白两不误！\n按照提示找到隐藏的信息,找通关的钥匙，共三关，通关既能看到表白内容哦！\n转发游戏到社交软件，加我QQ，凭截图得8M币。\n表白成功的，晒合照额外给20M币~ 有钱就是这么任性</string>

</resources>