<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/subscribe_activity_bg">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bar">

        <LinearLayout
            android:id="@+id/subscribe_main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/subscribe_bg"
            android:orientation="vertical"
            android:paddingBottom="14.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@mipmap/bottom_title_green"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/my_category_text"
                    style="@style/subscribe_my_tip_text"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/subscribe_my_category"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/my_category_tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/subscribe_manager_category_info"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="45dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="150dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/attention_edit"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <!--GridView的一些特殊属性：
            1.android:numColumns=”auto_fit”   //GridView的列数设置为自动
            2.android:columnWidth=”90dp "       //每列的宽度，也就是Item的宽度
            3.android:stretchMode=”columnWidth"    //缩放与列宽大小同步
            4.android:verticalSpacing=”10dp”          //两行之间的边距
            5.android:horizontalSpacing=”10dp”      //两列之间的边距
            6.android:cacheColorHint="#00000000" //去除拖动时默认的黑色背景
            7.android:listSelector="#00000000"        //去除选中时的黄色底色
            8.android:scrollbars="none"                   //隐藏GridView的滚动条
            9.android:fadeScrollbars="true"             //设置为true就可以实现滚动条的自动隐藏和显示
            10.android:fastScrollEnabled="true"      //GridView出现快速滚动的按钮(至少滚动4页才会显示)
            11.android:fadingEdge="none"                //GridView衰落(褪去)边缘颜色为空，缺省值是vertical。(可以理解为上下边缘的提示色)
            12.android:fadingEdgeLength="10dip"   //定义的衰落(褪去)边缘的长度
            13.android:stackFromBottom="true"       //设置为true时，你做好的列表就会显示你列表的最下面
            14.android:transcriptMode="alwaysScroll" //当你动态添加数据时，列表将自动往下滚动最新的条目可以自动滚动到可视范围内
            15.android:drawSelectorOnTop="false"  //点击某条记录不放，颜色会在记录的后面成为背景色,内容的文字可见(缺省为false)-->

            <gamemei.qiyun.com.gamemei.widget.draggridview.DragGrid
                android:id="@+id/userGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />

            <View
                android:id="@+id/seperate_line1"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#f0f0f0" />

            <TextView
                android:id="@+id/more_category_text"
                style="@style/subscribe_my_tip_text"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10dp"
                android:text="@string/subscribe_more_category" />

            <View
                android:id="@+id/seperate_line2"
                style="@style/subscribe_seperate_line"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/attention_edittext"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/table_blue"
                    android:text="@string/attention_search"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <gamemei.qiyun.com.gamemei.widget.draggridview.OtherGridView
                android:id="@+id/otherGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/category_layout"
        layout="@layout/subscribe_category_item"
        android:visibility="gone" />

</RelativeLayout>